# Teeny

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
Framework/: CMakeLists.txt
Framework/Include/Core/: Application.h  Core.h  Debugger.h  Logger.h  Observer.h  Singleton.h  StdHeaders.h  Timer.h  Window.h
Framework/Include/FS/: FS.h  File.h  FileReader.h  FileWriter.h  PhysicalFile.h
Framework/Include/Graphics/: Buffer.h  Framebuffer.h  Graphics.h  Program.h  Shader.h  Texture.h  VertexArray.h  VertexFormat.h
Framework/Include/Input/: Input.h
Framework/Include/Math/: GpuMat4.h  GpuVec4.h
Framework/Include/Scene/: Material.h  Mesh.h  Scene.h
Framework/Source/Core/: Application.cpp  Debugger.cpp  Logger.cpp  Timer.cpp  Window.cpp
Framework/Source/FS/: FileReader.cpp  FileWriter.cpp  PhysicalFile.cpp
Framework/Source/Graphics/: Buffer.cpp  Framebuffer.cpp  Graphics.cpp  Program.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexFormat.cpp
Framework/Source/Input/: Input.cpp
Framework/Source/Scene/: Mesh.cpp  Scene.cpp
Samples/: CMakeLists.txt
Samples/S01_EmptyWindow/: CMakeLists.txt
Samples/S01_EmptyWindow/Include/: EmptyWindow.h
Samples/S01_EmptyWindow/Source/: EmptyWindow.cpp
Samples/S02_Triangle/: CMakeLists.txt
Samples/S02_Triangle/Include/: Triangle.h
Samples/S02_Triangle/Source/: Triangle.cpp
Samples/S03_Cube/: CMakeLists.txt
Samples/S03_Cube/Include/: Cube.h
Samples/S03_Cube/Source/: Cube.cpp
